--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
-	"minAppVersion": "0.9.12",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md/about",
+	"id": "obsidian-shellcommands",
+	"name": "Shell commands",
+	"version": "0.0.0",
+	"minAppVersion": "0.12.12",
+	"description": "You can predefine system commands that you want to run frequently, and assign hotkeys for them. For example open external applications.",
+	"author": "Jarkko Linnanvirta",
+	"authorUrl": "",
 	"isDesktopOnly": false
 }
