--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "rollup": "^2.32.1",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "autocompleter": "^6.1.2"
   }
 }
