--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^14.14.37",
-    "autocompleter": "https://github.com/kraaden/autocomplete/tarball/master/1590fe09d347f7b6cb1466add5d8e5652bf9d1fb",
+    "autocompleter": "https://github.com/Taitava/autocomplete/archive/refs/tags/obsidian-shellcommands-0.13.0.tar.gz",
     "obsidian": "^0.12.11",
     "rollup": "^2.32.1",
     "tslib": "^2.2.0",
