--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@codemirror/state": "^6.1.0",
+    "@codemirror/view": "^6.0.3",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^14.14.37",
     "autocompleter": "https://github.com/Taitava/autocomplete/archive/refs/tags/obsidian-shellcommands-0.13.0.tar.gz",
-    "obsidian": "^0.12.11",
+    "obsidian": "0.15.4",
     "rollup": "^2.32.1",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
