#242: Use eslint to improve code readability.
Contains just the configuration for eslint. Code changes will be made in a later commit.

Similar changes were made to obsidian-sample-plugin: https://github.com/obsidianmd/obsidian-sample-plugin/commit/6fdd374cb8e46505dcef70ff249b48b16c4a659b
Exception: I needed to add "eslint": "8.20.0" myself to package.json.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "autocompleter": "https://github.com/Taitava/autocomplete/archive/refs/tags/obsidian-shellcommands-0.13.0.tar.gz",
+    "esbuild": "0.13.11",
+    "eslint": "8.20.0",
     "obsidian": "0.15.4",
     "rollup": "^2.32.1",
     "tslib": "^2.2.0",
