#242: Eslint: Do not yell about 'process' being undefined in rollup.config.js.
I found this solution from: https://stackoverflow.com/a/50894051/2754026

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,9 @@
 	"parserOptions": {
 		"sourceType": "module"
 	},
+	"env": {
+		"node": true
+	},
 	"rules": {
 		"no-unused-vars": "off",
 		"@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
