--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ root = true
 
 [*]
 charset = utf-8
-insert_final_newline = true
+insert_final_newline = false
 indent_style = space
 indent_size = 4
 tab_width = 4
