--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
 		"@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
 		"@typescript-eslint/ban-ts-comment": "off",
 		"no-prototype-builtins": "off",
-		"@typescript-eslint/no-empty-function": "off"
+		"@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-inferrable-types": "off"
 	}
 }
