#70: TypeScript compiler: Use strict null checks.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "noImplicitReturns": true,
+    "strictNullChecks": true,
     "lib": [
       "dom",
       "es2021",
