--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
 		"@typescript-eslint/ban-ts-comment": "off",
 		"no-prototype-builtins": "off",
 		"@typescript-eslint/no-empty-function": "off",
-        "@typescript-eslint/no-inferrable-types": "off"
+        "@typescript-eslint/no-inferrable-types": "off",
+        "semi": ["error", "always"]
 	}
 }
