--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
 		"no-prototype-builtins": "off",
 		"@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-inferrable-types": "off",
-        "semi": ["error", "always"]
+        "semi": ["error", "always"],
+        "comma-dangle": ["error", "always-multiline"]
 	}
 }
