--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
 	"minAppVersion": "0.16.3",
 	"description": "You can predefine system commands that you want to run frequently, and assign hotkeys for them. For example open external applications. Automatic execution is also supported, and execution via URI links.",
 	"author": "Jarkko Linnanvirta",
-	"authorUrl": "",
+	"authorUrl": "https://github.com/Taitava",
+    "fundingUrl": "https://publish.obsidian.md/shellcommands/Donate",
 	"isDesktopOnly": true
 }
