Discussion template for Debugging and testing: Add a generic message field.

--- a/.github/DISCUSSION_TEMPLATE/debugging-and-testing.yml
+++ b/.github/DISCUSSION_TEMPLATE/debugging-and-testing.yml
@@ -24,3 +24,9 @@ body:
         - Other (please mention in your message)
     validations:
       required: true
+  - type: textarea
+    id: message
+    attributes:
+        label: "Please describe the problem"
+    validations:
+        required: true
